Allowing the consumers for failing evaluations to mop-up messages that arrive post-failure, rather than opening a new consumer.
Do not publish paths with every group completion.

Fixes #87953

Set the permissions for the qpid work directory exposed on the host machine to 770.

Create a docker volume for log files from the graphics client.

Refs #87362